--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,15 @@ collections:
   projects:
     title: Projects
     output: true
+  upload:
+    title: Uploads
+    output: true
+tag:
+  title: brading
 email: ola@giovana.cc
 description: Giovana Ansoain Portfolio
+meta_description: "Desenvolvedor Front-end/Wordpress, Design Responsivo, HTML5, CSS3 e JavaScript"
+meta_keywords: "site, website, front-end, html5, css3, javascript, jquery, seo, otimizacao, performance"
 baseurl: ''
 url: ''
 markdown: kramdown
