--- a/_config.yml
+++ b/_config.yml
@@ -11,13 +11,13 @@ collections:
   projects:
     title: Projects
     output: true
-  uploads:
-    title: Uploads
+  upload:
+    title: Upload
     output: true
 email: ola@giovana.cc
 description: Giovana Ansoain Portfolio. Buscamos soluções criativas com processo de design para criar inovação.
 meta_keywords: "assessoria, agilidade, inovacao"
-baseurl: 'giovanaansoain/'
+baseurl: ''
 url: 'https://giovana.cc/'
 markdown: kramdown
 plugins:
