--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: ola@giovana.cc
 description: Giovana Ansoain Portfolio. Buscamos soluções criativas com processo de design para criar inovação.
 meta_keywords: "assessoria, agilidade, inovacao"
 baseurl: ''
-url: 'https://giovana.cc/'
+url: 'https://dutra21.github.io/giovanaansoain/'
 markdown: kramdown
 plugins:
 - jekyll-feed
