--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ email: ola@giovana.cc
 description: Giovana Ansoain Portfolio. Buscamos soluções criativas com processo de
   design para criar inovação.
 meta_keywords: assessoria, agilidade, inovacao
-baseurl: giovanaansoain/
-url: https://dutra21.github.io/
+baseurl: ''
+url: 
 markdown: kramdown
 plugins:
 - jekyll-feed
